updates; added razorhelpers; added tailbreeze

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -32,6 +32,7 @@
                 <ul class="space-y-3">
                     <li><a href="blocks.html" class="text-gray-300 hover:text-white transition-colors">Blocks</a></li>
                     <li><a href="blueprints.html" class="text-gray-300 hover:text-white transition-colors">Blueprints</a></li>
+                    <li><a href="tailbreeze.html" class="text-gray-300 hover:text-white transition-colors">Tailbreeze</a></li>
                     <li><a href="andy-ai.html" class="text-gray-300 hover:text-white transition-colors">Andy AI</a></li>
                     <li><a href="docs.html" class="text-gray-300 hover:text-white transition-colors">Documentation</a></li>
                     <li><a href="getting-started.html" class="text-gray-300 hover:text-white transition-colors">Examples</a></li>
