--- a/templates/header.html
+++ b/templates/header.html
@@ -45,7 +45,7 @@
                                 <a href="ui-components.html" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700">Razor UI</a>
                                 <a href="https:/razor-ui.noundry.com" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700">Razor UI Live Demo</a>
                                 <a href="https://nounjs.com" target="_blank" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700">NounJS UI</a>
-                                <a href="blazor-ui.html" class="hidden px-4 py-2 text-sm text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700">Blazor UI (WIP)</a>
+                                <!--<a href="blazor-ui.html" class="hidden px-4 py-2 text-sm text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700">Blazor UI (WIP)</a>-->
                                 <a href="tailbreeze.html" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700">Tailbreeze</a>
                             </div>
                         </div>
