--- a/templates/footer.html
+++ b/templates/footer.html
@@ -43,8 +43,9 @@
                     <li><a href="tailbreeze.html" class="text-gray-300 hover:text-white transition-colors">Tailbreeze</a></li>-->
                     <li><a href="https://engine.noundry.com" class="text-gray-300 hover:text-white transition-colors">Engine</a></li>
                     <li><a href="https://sentinel.noundry.com" class="text-gray-300 hover:text-white transition-colors">Sentinel</a></li>
-                    <li><a href="https://authnz.net" class="text-gray-300 hover:text-white transition-colors">Authnz.Net</a></li>
-                    <li><a href="https://logably.net" class="text-gray-300 hover:text-white transition-colors">Logably.Net</a></li>
+                    <li><a href="https://forms.noundry.com" class="text-gray-300 hover:text-white transition-colors">Forms</a></li>
+                    <!--<li><a href="https://authnz.net" class="text-gray-300 hover:text-white transition-colors">Authnz.Net</a></li>
+                    <li><a href="https://logably.net" class="text-gray-300 hover:text-white transition-colors">Logably.Net</a></li>-->
                     <li><a href="andy-ai.html" class="text-gray-300 hover:text-white transition-colors">Andy AI</a></li>
                     
                 </ul>
@@ -73,7 +74,7 @@
             </div>
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <p class="text-gray-400 text-sm">
-                    © 2025 Noundry. All rights reserved.
+                    © 2025-2026 Noundry. All rights reserved.
                 </p>
                 <div class="flex items-center space-x-6 mt-4 md:mt-0">
                 <a href="privacy.html" class="text-gray-400 hover:text-white text-sm transition-colors">Privacy Policy</a>
