--- a/templates/footer.html
+++ b/templates/footer.html
@@ -44,6 +44,7 @@
                     <li><a href="https://engine.noundry.com" class="text-gray-300 hover:text-white transition-colors">Engine</a></li>
                     <li><a href="https://sentinel.noundry.com" class="text-gray-300 hover:text-white transition-colors">Sentinel</a></li>
                     <li><a href="https://forms.noundry.com" class="text-gray-300 hover:text-white transition-colors">Forms</a></li>
+                    <li><a href="https://jobs.noundry.com" class="text-gray-300 hover:text-white transition-colors">Jobs</a></li>
                     <!--<li><a href="https://authnz.net" class="text-gray-300 hover:text-white transition-colors">Authnz.Net</a></li>
                     <li><a href="https://logably.net" class="text-gray-300 hover:text-white transition-colors">Logably.Net</a></li>-->
                     <li><a href="andy-ai.html" class="text-gray-300 hover:text-white transition-colors">Andy AI</a></li>
